Opened 12 years ago
Closed 7 years ago
#5230 closed bug (fixed)
Position of Defaults/Revert buttons and spacing in Preferences is inconsistent
Reported by: | damoklas | Owned by: | Janus |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Non standart look in preferences applets GUI: the same buttons in different places; different distances from the edges.
Attachments (3)
Change History (17)
comment:1 by , 12 years ago
comment:2 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Right you are. The new BControlLook class has methods for retrieving standard spacing and insets, it should be used in every preflet. It's probably not even much work, since most preflets are already converted to use layout management. The ticket falls in my area, I suppose, but I am not working on it just now.
by , 12 years ago
Attachment: | standardpositionofbuttons.jpg added |
---|
I think that is gut standard position for buttons, some like that.
comment:3 by , 12 years ago
In the cases where an Apply button is missing it's because settings are meant to be live, taking effect immediately. This has been the preferred way for the panels to work. When this live quality isn't possible, Apply and Revert are used. For some cases there are only partial meaningful defaults, or none at all, like for Time, Email and Screen, and thus not good to have a Defaults button. Full consistency here - same 3 buttons in all preflets - is not a desired thing IMO, but placement, distances, etc can definitely be improved.
comment:4 by , 12 years ago
to kirilla: Not that I have in mind. I mean the standard order of buttons and a standard location. It is clear that the number of buttons needed as it is required.
by , 8 years ago
Attachment: | 0001-Fix-button-layout-consistency-issues-in-preflets.patch added |
---|
comment:5 by , 8 years ago
patch: | 0 → 1 |
---|
I checked all preferences windows and fixed all the problems I have noticed.
comment:6 by , 8 years ago
Thanks for the patch! It seems fine, except for the TouchpadPrefView.cpp change. Do you perhaps mean "B_USE_SMALL_ITEM_SPACING" instead of hard-coding "5" pixels?
by , 8 years ago
Attachment: | 0002-Fix-button-layout-consistency-issues-in-preflets.patch added |
---|
fixed patch
follow-up: 9 comment:8 by , 8 years ago
Thanks, patch is applied. However, I opened up all preflets, and the patch does not seem to address all inconsistencies. I can sometimes see normal spacing between the "default" and "revert" button, sometimes smaller spacing (for example the Mouse preflet). I would prefer the normal spacing throughout. Since it's still not 100% consistent, I am not closing the ticket, yet. Thanks for your work in any case!
comment:9 by , 8 years ago
Replying to stippi:
I can sometimes see normal spacing between the "default" and "revert" button, sometimes smaller spacing (for example the Mouse preflet). I would prefer the normal spacing throughout.
Should preflets use B_USE_SMALL_SPACING (as in Mouse preflet), B_USE_ITEM_SPACING or something different (e.g. B_USE_DEFAULT_SPACING) then? I am not sure what are the uses for each of these values.
comment:10 by , 8 years ago
IMHO it should be B_USE_DEFAULT_SPACING everywhere, but there should be additional space forced between the buttons on the left side of the window and those on the right. Usually, adding the glue should be enough, since then there are two spacings added:
[left 1]<-default spacing->[left 2]<-default spacing->[glue]<-default spacing->[right]
comment:11 by , 8 years ago
Summary: | Preferences GUI bug → Posiiton of Defaults/Revert buttons and spacing in Preferences is inconsistent |
---|
comment:12 by , 7 years ago
Owner: | changed from | to
---|---|
Summary: | Posiiton of Defaults/Revert buttons and spacing in Preferences is inconsistent → Position of Defaults/Revert buttons and spacing in Preferences is inconsistent |
comment:13 by , 7 years ago
Should be fixed in hrev49056 and with my old commits. I don't close this now for feedbacks. Please let me know if something is off.
lack of style