Preferences: Consistent buttons position and spacing.

* Appearance fix spacing.
* Keyboard fix spacing.
* Mouse fix spacing.
* Notifications fix spacing.
* Fixes #5230.