src/preferences/mouse/MouseWindow.cpp
@@ -60,14 +60,15 @@ MouseWindow::MouseWindow(BRect _rect)
 	// Build the layout
 	SetLayout(new BGroupLayout(B_VERTICAL));
 
-	AddChild(BGroupLayoutBuilder(B_VERTICAL, 10)
+	AddChild(BGroupLayoutBuilder(B_VERTICAL)
 		.Add(fSettingsBox)
-		.AddGroup(B_HORIZONTAL, B_USE_SMALL_SPACING)
+		.AddGroup(B_HORIZONTAL)
 			.Add(fDefaultsButton)
 			.Add(fRevertButton)
 			.AddGlue()
 		.End()
-		.SetInsets(10, 10, 10, 10)
+		.SetInsets(B_USE_DEFAULT_SPACING, B_USE_DEFAULT_SPACING,
+			B_USE_DEFAULT_SPACING, B_USE_DEFAULT_SPACING)
 	);
 
 	// check if the window is on screen
