src/preferences/notifications/PrefletWin.cpp
@@ -47,23 +47,19 @@ PrefletWin::PrefletWin()
 	fApply = new BButton("apply", B_TRANSLATE("Apply"), new BMessage(kApply));
 	fApply->SetEnabled(false);
 
-	// Calculate inset
-	float inset = ceilf(be_plain_font->Size() * 0.7f);
-
 	// Build the layout
 	SetLayout(new BGroupLayout(B_VERTICAL));
 
 	// Add childs
-	AddChild(BGroupLayoutBuilder(B_VERTICAL, inset)
+	AddChild(BGroupLayoutBuilder(B_VERTICAL)
 		.Add(fMainView)
-
-		.AddGroup(B_HORIZONTAL, inset)
+		.AddGroup(B_HORIZONTAL)
 			.Add(fRevert)
 			.AddGlue()
 			.Add(fApply)
 		.End()
-
-		.SetInsets(inset, inset, inset, inset)
+		.SetInsets(B_USE_DEFAULT_SPACING, B_USE_DEFAULT_SPACING,
+			B_USE_DEFAULT_SPACING, B_USE_DEFAULT_SPACING)
 	);
 
 	ReloadSettings();
